package com.github.mathlon26.ribble;

import com.github.mathlon26.ribble.ecs.component.Component;

public class ExampleComponent extends Component {
    public int count = 0;
}
