package com.github.mathlon26.ribble.ecs;

public class EntityManager {
}
