package com.github.mathlon26.ribble.ecs.component;

import com.github.mathlon26.ribble.ecs.ObjectPool;

public class ComponentPool extends ObjectPool<Component> {
    public ComponentPool() {
        super();
    }
}
