package com.github.mathlon26.ribble.ecs.entity;

public class Entity {
}
